src/objects/vlocity_ins__SystemInterface__c.object
<CustomObject>
    <description>Registration of an API (such as a web service) available from a given system for integrating with the system. Used by Order Management to register the fulfillment system APIs needed to drive fulfillment. Master-detail child object of System.</description>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Implementation__c</fullName>
        <label>Implementation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Key__c</fullName>
        <formula>vlocity_ins__SystemId__r.Name &amp; &quot;:&quot; &amp; Name</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SystemId__c</fullName>
        <label>System</label>
        <referenceTo>vlocity_ins__System__c</referenceTo>
        <relationshipLabel>System</relationshipLabel>
        <relationshipName>SystemInterfaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>System Interface</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>System Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Interfaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>